1.24 - ???
 * Moved to Bitbucket: https://bitbucket.org/lazka/mutagen
 * ID3:
   * Parse utf-16 text frames with wrong termination (#169)
   * Fix parsing of utf-16 SYLT frames (#173)
 * setup.py: Don't install leftover files produced by the test suite (#179)

1.23 - 2014.05.14
 * tools: Don't crash in misconfigured envs, fall back to utf-8.
 * mp3: Return correct mimetype for MP2 files. (#163)
 * id3: deterministic sorting of frames. (#166)
 * AIFF support (#146, Evan Purkhiser)

1.22 - 2013.09.08
 * Minimum required Python version is now 2.6
 * Online API reference at https://mutagen.readthedocs.org/
 * EasyID3:
   * Fix crash with empty TXXX values. (#135)
 * ID3:
   * id3v2.3 writing support (#85)
   * Add iTunes podcast frames (TGID, TDES, WFED) (#141)
   * Updated id3v1 genre list
 * MP4:
   * add_tags() will not replace existing tags. (#101)
   * Don't ignore tags if parsing unknown atoms fails.
   * Raise on invalid 64bit atom size (#132, Sidnei da Silva)
 * APEv2:
   * Handle invalid tag item count. (#145, Dawid Zamirski)
 * Ogg:
   * Faster parsing of files with large packets.
 * VComment:
   * Preserve text case for field names added through the dict interface (#152)
 * mid3v2:
   * New -e,--escape switch to enable interpretation of escape sequences and
     makes escaping of the colon separator possible. (#159)
 * mid3iconv:
   * Convert COMM frames (#128)

1.21 - 2013.01.30
 * Fix Python 2.3 compatibility (broken in 1.19).
 * Fix many warnings triggered by -3. (#27)
 * mid3v2:
   * Add --TXXX support. (#62, Tim Phipps)
   * Add --POPM support. (#71)
   * Allow setting multiple COMM or TXXX frames with one command line.
 * FLAC:
   * Try to handle corrupt Vorbis comment block sizes. (#52)
   * Try to handle corrupt Picture block sizes (#106, Christoph Reiter)
   * Don't leak file handle with PyPy (#111, Marien Zwart)
 * ID3:
   * MakeID3v1: Do not generate bad tags when given short dates. (#69)